--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -44,11 +44,60 @@ width: 100vw;
     
 }
 
-#main-content {
+#main_content {
     width: 80%;
     background-color: #ddd4ee;
-    height: 100%; 
-    border: 2px solid black;
+    height: 100%;
+}
+
+
+#directions, #current_word, #game_stats, #guesses_left {
+    border: 1px solid black;
+    margin: 15px;
+    padding: 15px;
+    text-align: center;
+}
+
+#current_word, #spent_letters, #game_stats, #guesses_left {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.letter_box, .letter_spent {
+   border: 1px solid black;
+   margin: 5px;
+   background-color: green;
+}
+
+.word_letter {
+    padding: 10px;
+    background-color: rgb(30, 30, 189);
+    color: yellow;
+    font-weight: bolder;
+    font-size: 23px;
+    width: 20px;
+    height: 20px;
+    opacity: 1;
+    z-index: 7;
+    opacity: 0;
+}
+
+.letter_spent, #guesses_left {
+    padding: 5px;
+    background-color: yellow;
+    color: rgb(30, 30, 189);
+    font-weight: bolder;
+    font-size: 15px;
+    width: 15px;
+    height: 15px;
+}
+
+#guesses_left {
+    width: 50px;
+    height: 25px;
+    font-size: 22px;
 }
 
 h1 {
