--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,26 +1,32 @@
 body {
     box-sizing: border-box;
+    font-family: 'Permanent Marker', cursive;
 }
 
 #container {
-height: 100vh;
-width: 100vw;
+    height: 100vh;
+    width: 100vw;
 }
 
 .row {
     width: 100%;
 }
 
-.column {
-
+#header, #footer {
+    height: 80px;
+    overflow: hidden;
+    text-align: center;
 }
 
-#header, #footer {
-    text-align: center;
-    height: 40px;
-    background-color: aqua;
-    padding-top: 0px;
-    margin: auto;
+#header_img {
+    width: 100%;
+    opacity: .45;
+}
+
+#header_title {
+    position: absolute;
+    top: 15px;
+    left: 20%;
 }
 
 #footer {
@@ -32,27 +38,26 @@ width: 100vw;
 #body {
     display: flex;
     flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    height: calc(100vh - 62px);
 }
 
 #sidebar {
     width: 20%;
-    background-color: aqua;
-    height: 100%;
-    
+    display: flex;
+    flex-direction: column;
+    margin: 30px;
+    padding-top: 50px;
 }
 
 #main_content {
     width: 80%;
-    background-color: #ddd4ee;
     height: 100%;
 }
 
+#game {
+    margin-top: 10px;
+}
 
 #directions, #current_word, #game_stats, #guesses_left {
-    border: 1px solid black;
     margin: 15px;
     padding: 15px;
     text-align: center;
@@ -84,6 +89,14 @@ width: 100vw;
     opacity: 0;
 }
 
+.side_list {
+    height: 25px;
+    width: 100px;
+    color: rgb(128, 128, 5);
+    margin: 3px;
+    text-align: center;
+}
+
 .letter_spent, #guesses_left {
     padding: 5px;
     background-color: yellow;
@@ -98,6 +111,12 @@ width: 100vw;
     width: 50px;
     height: 25px;
     font-size: 22px;
+}
+
+#result {
+    font-size: 2.5rem;
+    text-align: center;
+    color: red;
 }
 
 h1 {
